fixed dark mode, changed icon styles and typefaces

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@
 }
 
 .title {
+    margin-bottom: 2.5%;
+    margin-top: 2.5%;
     transition: 0.5s;
 }
 
@@ -19,6 +21,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    margin-bottom: 20px;
 }
 
 .input {
@@ -103,6 +106,7 @@
 .item-text {
     font-size: 1.25em;
     transition: 0.3s;
+    font-family: 'Lato', sans-serif;
 }
 
 .todo-container {
@@ -118,6 +122,7 @@
     justify-content: space-between;
     padding: 0px;
     width: 50%;
+    gap: 20%;
 }
 
 .button-div {
@@ -142,19 +147,26 @@
 .dark-mode-btn {
     background: none;
     border: none;
-    width: 60px;
+    width: 60;
     height: 60px;
     filter: invert(0%) sepia(9%) saturate(7465%) hue-rotate(340deg) brightness(109%) contrast(97%);
 }
 
-.dark-mode-btn img {
-    width: 75%;
+.dark-mode-btn .material-symbols-outlined {
+    font-size: 3em;
+
+    font-variation-settings:
+        'FILL' 1,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 24
 }
 
 body {
     margin: 20px;
     padding: 20px;
-    font-family: sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 200;
 
     background: #ffffff;
     transition: 0.5s;
